--- a/back/src/documentation/collection.yml
+++ b/back/src/documentation/collection.yml
@@ -404,3 +404,25 @@ paths:
                 type: object
               example:
                 token: some_JWT
+  /reset-password:
+    patch:
+      tags:
+        - Auth
+      summary: New Request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                userId: id
+                resetToken: token
+                newPassword: password
+      responses:
+        '200':
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: string
+              example: null
