--- a/back/.env
+++ b/back/.env
@@ -9,8 +9,8 @@ NODE_ENV=development
 DATABASE_DIALECT=postgres
 DATABASE_HOST=localhost
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=
-DATABASE_NAME=sonnenlicht-back
+DATABASE_PASSWORD=senha
+DATABASE_NAME=sonnenlicht-db
 
 DATABASE_SSL=false
 
